# api/docs/swagger/swagger.json
@@ -17,7 +17,9 @@
             }
           }
         },
-        "tags": ["countries"]
+        "tags": [
+          "countries"
+        ]
       }
     },
     "/countries/currencies": {
@@ -36,7 +38,9 @@
             }
           }
         },
-        "tags": ["countries"]
+        "tags": [
+          "countries"
+        ]
       }
     },
     "/countries/languages": {
@@ -55,7 +59,30 @@
             }
           }
         },
-        "tags": ["countries"]
+        "tags": [
+          "countries"
+        ]
+      }
+    },
+    "/vietnam/license-plates": {
+      "get": {
+        "operationId": "VietnamController_getLicensePlates",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LicensePlatesResponseDto"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "vietnam"
+        ]
       }
     },
     "/crypto/coins": {
@@ -83,7 +110,9 @@
             }
           }
         },
-        "tags": ["crypto"]
+        "tags": [
+          "crypto"
+        ]
       }
     },
     "/health": {
@@ -102,7 +131,9 @@
             }
           }
         },
-        "tags": ["health"]
+        "tags": [
+          "health"
+        ]
       }
     },
     "/news/google": {
@@ -121,7 +152,9 @@
             }
           }
         },
-        "tags": ["news"]
+        "tags": [
+          "news"
+        ]
       }
     },
     "/news/sources": {
@@ -140,7 +173,9 @@
             }
           }
         },
-        "tags": ["news"]
+        "tags": [
+          "news"
+        ]
       }
     }
   },
@@ -170,7 +205,12 @@
             "type": "object"
           }
         },
-        "required": ["region", "subregion", "currencies", "languages"]
+        "required": [
+          "region",
+          "subregion",
+          "currencies",
+          "languages"
+        ]
       },
       "CountriesDto": {
         "type": "object",
@@ -185,7 +225,10 @@
             }
           }
         },
-        "required": ["total", "countries"]
+        "required": [
+          "total",
+          "countries"
+        ]
       },
       "CurrencyDto": {
         "type": "object",
@@ -200,7 +243,11 @@
             "type": "string"
           }
         },
-        "required": ["code", "name", "symbol"]
+        "required": [
+          "code",
+          "name",
+          "symbol"
+        ]
       },
       "CurrenciesDto": {
         "type": "object",
@@ -215,7 +262,10 @@
             }
           }
         },
-        "required": ["total", "currencies"]
+        "required": [
+          "total",
+          "currencies"
+        ]
       },
       "LanguageDto": {
         "type": "object",
@@ -227,7 +277,10 @@
             "type": "string"
           }
         },
-        "required": ["code", "name"]
+        "required": [
+          "code",
+          "name"
+        ]
       },
       "LanguagesDto": {
         "type": "object",
@@ -242,7 +295,33 @@
             }
           }
         },
-        "required": ["total", "languages"]
+        "required": [
+          "total",
+          "languages"
+        ]
+      },
+      "LicensePlateDto": {
+        "type": "object",
+        "properties": {}
+      },
+      "LicensePlatesResponseDto": {
+        "type": "object",
+        "properties": {
+          "total": {
+            "type": "number"
+          },
+          "licensePlates": {
+            "default": [],
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/LicensePlateDto"
+            }
+          }
+        },
+        "required": [
+          "total",
+          "licensePlates"
+        ]
       },
       "CoinDto": {
         "type": "object",
@@ -334,7 +413,10 @@
             }
           }
         },
-        "required": ["total", "coins"]
+        "required": [
+          "total",
+          "coins"
+        ]
       },
       "HealthResponseDto": {
         "type": "object",
@@ -343,7 +425,9 @@
             "type": "string"
           }
         },
-        "required": ["status"]
+        "required": [
+          "status"
+        ]
       },
       "GoogleCountryDto": {
         "type": "object",
@@ -358,7 +442,10 @@
             }
           }
         },
-        "required": ["country", "queries"]
+        "required": [
+          "country",
+          "queries"
+        ]
       },
       "GoogleResponseDto": {
         "type": "object",
@@ -373,7 +460,10 @@
             }
           }
         },
-        "required": ["total", "countries"]
+        "required": [
+          "total",
+          "countries"
+        ]
       },
       "NewsSourceDto": {
         "type": "object",
@@ -423,7 +513,10 @@
             }
           }
         },
-        "required": ["total", "sources"]
+        "required": [
+          "total",
+          "sources"
+        ]
       }
     }
   }
