# api/src/modules/countries/vietnam/vietnam.dto.ts
@@ -1,0 +1,10 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { LicensePlateDto } from 'src/generated/licensePlate.entity';
+
+export class LicensePlatesResponseDto {
+  @ApiProperty()
+  total: number;
+
+  @ApiProperty({ type: [LicensePlateDto], default: [] })
+  licensePlates: LicensePlateDto[];
+}
